# grizzly-platform

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .sourceignore  .yamllint  CLAUDE.md  INDEX.md  README.md  TOOLS.md
.githooks/: pre-commit
.github/workflows/: build-gate-image.yaml  build-runner-image.yaml  gate.yaml
ansible/: README.md
ansible/inventory/: lab-nodes.yml  proxy-vps.yml
ansible/playbooks/: bootstrap-openbao.yml  configure-ex50.yml  configure-stalwart.yml  deploy-foundation-stores.yml  deploy-observability.yml  deploy-openbao.yml  deploy-residuum.yml  join-k8s-workers.yml  migrate-platform-secrets-to-openbao.yml  r730xd-storage.yml  r730xd-zfs.yml  rollback-openbao-migration.yml  rotate-openbao-keys.yml  seed-app-secrets.yml  setup-argo-stores.yml  setup-authentik.yml  setup-career-scanner-stores.yml  (+23 more)
archive/: README.md  ap630-debian-project.md  residuum-feedback-plan.md  residuum-feedback-schema.md
docker/grizzly-gate/harness/: Cargo.toml  deny.toml
docker/grizzly-gate/harness/src/: config.rs  detect.rs  gateconfig.rs  main.rs
docs/: INDEX.md  README.md  aerohive-cli-reference.md  ci-gate-coverage.md  ci-gate.md  ex50-dal-interface.md  hardware.md  k8s-cluster-standup.md  monitoring-integration.md  monitoring.md  network.md  nodeport-allocation.md
scripts/: README.md  bootstrap-ssh-sudo.sh  build-jumpbox-image.sh  build-laptop-iso.sh  build-r730xd-iso.sh  build-worker-iso.sh  fetch-openbao-ca.sh  install-k8s-cli.sh  install-observability-cli.sh  set-openbao-approle-secrets.sh  set-openbao-bootstrap-secrets.sh  wipe-r730xd-bays.sh
(+317 files in other folders)
